Finished config migration + implemented some tests + added design document to backend